# CycleGAN-Cross-Domain-Image-Translation

./: .dockerignore  .gitignore  Cross_Domain_Image_Translation_.ipynb  Dockerfile  FDL_assignement_Sabarish_RavichandranMehala .ipynb  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  streamlit_app.py
configs/: apple2orange.yaml
scripts/: download_dataset.py  evaluate.py  generate_samples.py  infer_image.py  run_experiment.py  train.py
src/cyclegan/: __init__.py  checkpoints.py  config.py  data.py  evaluation.py  inference.py  losses.py  models.py  tracking.py  trainer.py  utils.py
tools/: evaluate.ps1  evaluate.sh  infer_image.ps1  infer_image.sh  run_api.ps1  run_api.sh  run_streamlit.ps1  run_streamlit.sh  train.ps1  train.sh
